[project]
name = "cumulus-library-covid"
requires-python = ">= 3.11"
dependencies = [
    "cumulus-library >= 3.0, <4",
    "sqlfluff >= 3"
]
readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["description", "version"]

[project.urls]
Home = "https://smarthealthit.org/cumulus"
Documentation = "https://docs.smarthealthit.org/cumulus/"
Source = "https://github.com/smart-on-fhir/cumulus-library-covid"


[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
dev = [
    # if you update the ruff version, also update .pre-commit-config.yaml
    "ruff < 0.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
allowed-confusables = ["’"]  # allow proper apostrophes
select = [
    "A",  # prevent using keywords that clobber python builtins
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "PLE",  # pylint errors
    "RUF",  # the ruff developer's own rules
    "S",  # bandit security warnings
    "UP",  # alert you when better syntax is available in your python version
]
